# system_design

./: README.md  RUST_DESIGN.md  setup.py  system_design_v1.0.md
eventbus-rust/: Cargo.toml  README.md  design.md
eventbus-rust/examples/: basic_demo.rs  jsonrpc_client_demo.rs  multi_bus_demo.rs  performance_benchmark.rs
eventbus-rust/src/: lib.rs
eventbus-rust/src/config/: mod.rs
eventbus-rust/src/core/: error.rs  mod.rs  traits.rs  types.rs
eventbus-rust/src/jsonrpc/: client.rs  methods.rs  mod.rs  server.rs
eventbus-rust/src/routing/: memory_router.rs  mod.rs  rule_engine.rs
eventbus-rust/src/service/: metrics.rs  mod.rs
eventbus-rust/src/storage/: memory.rs  mod.rs  postgres.rs  sqlite.rs
eventbus-rust/src/utils/: event_utils.rs  mod.rs  topic_utils.rs  trn_utils.rs
eventbus-rust/tests/: jsonrpc_integration_test.rs
examples/: basic_usage.py
jsonrpc-playground/: Cargo.toml
jsonrpc-playground/src/: main.rs
jsonrpc-playground/src/events/: mod.rs
jsonrpc-playground/src/server/: mod.rs
jsonrpc-playground/src/services/: mod.rs
jsonrpc-playground/src/sse/: mod.rs
jsonrpc-playground/src/websocket/: mod.rs
jsonrpc-playground/static/html/: index.html
jsonrpc-rust/: Cargo.toml  DESIGN.md  TRN_INTEGRATION_REPORT.md
jsonrpc-rust/examples/: bidirectional_stream_demo.rs  phase1_demo.rs
jsonrpc-rust/src/: lib.rs
jsonrpc-rust/src/core/: error.rs  future.rs  mod.rs  traits.rs  types.rs
jsonrpc-rust/src/transport/: abstraction.rs  mock.rs  mod.rs  registry.rs  tcp.rs
jsonrpc-rust/tests/: test_trn_integration.rs
trn/: __init__.py  constants.py  core.py  exceptions.py  parser.py  url_converter.py  utils.py  validator.py
trn-rust/: Cargo.toml  README.md  debug_test.rs
trn-rust/benches/: parsing.rs  url_conversion.rs  validation.rs
trn-rust/examples/: README.md  advanced_usage.rs  basic_usage.rs  debug_trn.rs
trn-rust/src/: builder.rs  constants.rs  error.rs  lib.rs  parsing.rs  pattern.rs  types.rs  url.rs  utils.rs  validation.rs
trn-rust/tests/: test_builder.rs  test_integration.rs  test_parsing.rs  test_pattern.rs  test_types.rs  test_url.rs  test_validation.rs
