[package]
name = "eventbus-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance event bus service built on jsonrpc-rust"
documentation = "https://docs.rs/eventbus-rust"
homepage = "https://github.com/your-username/eventbus-rust"
repository = "https://github.com/your-username/eventbus-rust"
license = "MIT OR Apache-2.0"
keywords = ["eventbus", "events", "pubsub", "messaging", "distributed", "jsonrpc"]
categories = ["network-programming", "web-programming", "asynchronous"]
readme = "README.md"
exclude = [
    "target/*",
    ".git/*",
    "*.pdf"
]

[features]
default = ["std", "tcp", "persistence"]
std = []
tcp = ["jsonrpc-rust/tcp"]

tls = ["jsonrpc-rust/tls"]
persistence = ["sqlx"]

metrics = ["prometheus-client"]
trn-integration = ["jsonrpc-rust/trn-integration"]
debug-location = ["jsonrpc-rust/debug-location"]
mock = ["jsonrpc-rust/mock"]
benchmarks = ["criterion"]
fuzz = ["afl"]

[dependencies]
# JSON-RPC 基础库
jsonrpc-rust = { path = "../jsonrpc-rust", features = ["tcp"] }
trn-rust = { path = "../trn-rust" }

# 核心异步运行时
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# JSON 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 并发和同步
dashmap = "5.5"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }

# 数据持久化 (可选)
sqlx = { version = "0.7", optional = true, features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql", "chrono"] }

# 监控和指标 (可选)
prometheus-client = { version = "0.22", optional = true }
criterion = { version = "0.5", optional = true }
afl = { version = "0.13", optional = true }

# 工具依赖
rand = "0.8"
url = "2.4"
regex = "1.0"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
tempfile = "3.0"





[lib]
name = "eventbus_rust"
path = "src/lib.rs"
